--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -67,14 +67,14 @@ de:
         all: Tippen um in allen Teams zu suchen...
 
   encryptables:
-    title: Encryptables
+    title: Zugangsdaten
     index_menu:
-      create: Encryptable erstellen
+      create: Zugangsdaten erstellen
       folder: Gruppen
     show_menu:
       add_attachment: Anhang hinzufügen
     edit:
-      title: Encryptable editieren
+      title: Zugangsdaten editieren
       random_password: Zufälliges Passwort
       edit_password_placeholder: Klicken oder fokusieren für Eingabe ...
       team_placeholder: Wählen Sie ein Team aus
@@ -87,7 +87,7 @@ de:
         good: Gut
         strong: Stark
     show:
-      encryptable: Encryptable
+      encryptable: Zugangsdaten
       created_at: "Erstellt am"
       last_update: "Letzte Änderung am"
       last_change: "Letzte Änderung vor %{time_ago}"
@@ -99,7 +99,7 @@ de:
       copy_username: Benutzername kopieren
       add_attachment: Anhang hinzufügen
     new:
-      title: Neues Encryptable
+      title: Neue Zugangsdaten
 
   admin:
     title: "Admin"
@@ -180,7 +180,7 @@ de:
         title: Teams
         teamname: Teamname
         num_folders: Anzahl Ordner
-        num_encryptables: Anzahl Encryptables
+        num_encryptables: Anzahl Zugangsdaten
         members: Mitglieder
     user_roles:
       user: Benutzer
@@ -197,16 +197,16 @@ de:
     new:
       title: Ordner erstellen
     show:
-      move: Encryptable zu einem anderen Ordner verschieben
-      title: "Encryptables des Ordners %{folder_name} des Teams %{team_name}"
-    no_encryptables: Keine Encryptables
+      move: Zugangsdaten zu einem anderen Ordner verschieben
+      title: "Zugangsdaten des Ordners %{folder_name} des Teams %{team_name}"
+    no_encryptables: Keine Zugangsdaten
     tooltips:
       delete: Ordner löschen
       edit: Ordner bearbeiten
 
   file_entries:
     new:
-      title: Anhang zum Encryptable hinzufügen
+      title: Anhang zu den Zugangsdaten hinzufügen
       upload_file: Datei hochladen
       upload: Hochladen
       choose_file: Wählen Sie eine Datei
@@ -406,10 +406,10 @@ de:
       created: Der neue Benutzer wurde erfolgreich erstellt.
       updated: Der Benutzer wurde erfolgreich aktualisiert.
     encryptables: &encryptables_translations
-      created: Das neue Encryptable wurde erfolgreich erstellt.
-      updated: Das Encryptable wurde erfolgreich aktualisiert.
-      deleted: Das Encryptable wurde erfolgreich gelöscht.
-      moved: Das Encryptable wurde erfolgreich veschoben
+      created: Die neuen Zugangsdaten wurden erfolgreich erstellt.
+      updated: Die neuen Zugangsdaten wurden erfolgreich aktualisiert.
+      deleted: Die neuen Zugangsdaten wurden erfolgreich gelöscht.
+      moved: Die neuen Zugangsdaten wurden erfolgreich veschoben
       username_copied: Benutzername wurde kopiert
       password_copied: Passwort wurde kopiert
 
@@ -433,7 +433,7 @@ de:
       uploaded_file_inexistent: Datei ist inexistent
       uploaded_filename_already_exists: Dateiname existiert bereits
     session:
-      welcome: Willkommen bei Cryptopus. Zuerst müssen Sie ein Encryptable erstellen. Bitte wählen Sie ein sicheres Passwort.
+      welcome: Willkommen bei Cryptopus. Zuerst müssen Sie Zugangsdaten erstellen. Bitte wählen Sie ein sicheres Passwort.
       auth_failed: Ungültiger Benutzername / Passwort.
       only_local: Nur lokale Benutzer dürfen ihr Passwort ändern.
       new_password_set: Das neue Passwort wurde erfolgreich gesetzt.
@@ -472,7 +472,7 @@ de:
         newPassword2: "Neues Passwort bestätigen:"
         wrongPassword: Falsches Passwort
       encryptable:
-        encryptable: Encryptable
+        encryptable: Zugangsdaten
         account_name: Accountname
         username: Benutzername
         password: Passwort
@@ -575,10 +575,10 @@ de:
     settings: Einstellungen
     profile: Profil
     add_folder: Erstelle einen neuen Ordner
-    add_account: Erstelle ein neues Encryptable
-    account_details: Encryptable Details anzeigen
+    add_account: Erstelle neue Zugangsdaten
+    account_details: Zugangsdaten Details anzeigen
     delete_folder: Ordner löschen
-    delete_account: Encryptable löschen
+    delete_account: Zugangsdaten löschen
     configure: Konfiguriere Mitglieder
 
   #Pundit
@@ -592,7 +592,7 @@ de:
     name:
       present: Der Name muss vorhanden sein
       too_long: Der Name ist zu lang
-      duplicate_name: Encryptable existiert bereits!
+      duplicate_name: Zugangsdaten existieren bereits!
     description:
       too_long: Die Beschreibung ist zu lang
     file:
