--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,7 +31,6 @@ ru:
   maintenance_tasks: "Задачи обслуживания"
   users: "Пользователи"
   profile_title: "профиль"
-  change_password: "Сменить пароль"
   last_login_date_and_from: "Последний вход был %{last_login_at} с %{last_login_from}"
   last_login_date_and_from_country: "Последний вход был %{last_login_at} с %{last_login_from} (%{last_login_country})"
   last_login_date: "Последний вход был %{last_login_at}"
@@ -66,7 +65,7 @@ ru:
       title: "Редактивание аккаунта"
       random_password: "Случайный пароль"
     show:
-      title: "Аккаунт: %{account_name}"
+      title: "Аккаунт: %{encryptable_name}"
       last_change: "Последнее изменение %{time_ago} назад"
       attachments: "Вложения"
       file: "Файл"
@@ -272,7 +271,6 @@ ru:
   confirm:
     delete: "Удалить %{entry_class} %{entry_label} ?"
     changeAdmin: "дать/забрать права администратора?"
-    deleteWithTeams: "Удалить все команды, в которых кроме пользователя %{username} никого нет"
 
 #Validation Errors
   activerecord:
