add translations for log entry event

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -131,6 +131,9 @@ ch_be:
       add_attachment: Anhang hinzufüegä
     new:
       title: Nöie Encryptable
+    log:
+      update: Bearbeitet
+      viewed: Aagluegt
 
   admin:
     title: Admin
