--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -98,6 +98,9 @@ en:
       add_attachment: Add Attachment
     new:
       title: New Encryptable
+    log:
+      update: edited
+      viewed: viewed
 
   admin:
     title: Admin
