--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -100,6 +100,10 @@ fr:
       add_attachment: Ajouter un attachement
     new:
       title: Nouveau compte
+    log:
+      update: modifié
+      viewed: regardé
+
 
   admin:
     title: "Admin"
